Added search service tests

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -14,7 +14,7 @@
   </thead>
   <tbody>
   <tr *ngFor="let person of searchResults; let i=index">
-    <td>{{person.name}}</td>
+    <a (click)="onSelect(person)">{{person.name}}</a>
     <td>{{person.phone}}</td>
     <td>{{person.address.street}}<br/>
       {{person.address.city}}, {{person.address.state}} {{person.address.zip}}
